# Brent_Tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  app.db  main.py  pyproject.toml
.github/workflows/: ci.yml
app/api/: alert.py  auth.py  prices.py
app/core/: database.py  init_db.py  security.py
app/models/: alert.py  brent.py  user.py
app/repositories/: price_repo.py  user_repo.py
app/schemas/: alert.py  user.py
app/services/: alert_service.py  auth_service.py  brent_service.py  price_service.py
brent-tracker-frontend/: README.md  index.html  package-lock.json  package.json
brent-tracker-frontend/src/: App.jsx  api.js  styles.css
docs/coverage-report/: class_index.html  function_index.html  index.html  status.json  z_4eed7ad336a4b97f_price_repo_py.html  z_4eed7ad336a4b97f_user_repo_py.html  z_5f5a17c013354698___init___py.html  z_6c0e4b930745278b_alert_py.html  z_6c0e4b930745278b_brent_py.html  z_6c0e4b930745278b_user_py.html  z_8f7e1016f2d37417_database_py.html  z_c0f67d75e686303c_alert_py.html  z_c0f67d75e686303c_user_py.html  z_c318f3fa19a49f69_alert_service_py.html  z_c318f3fa19a49f69_auth_service_py.html  z_c318f3fa19a49f69_brent_service_py.html  z_c318f3fa19a49f69_price_service_py.html  z_cfb6adc3f81c8e3c_alert_py.html  z_cfb6adc3f81c8e3c_auth_py.html  z_cfb6adc3f81c8e3c_prices_py.html
docs/diagrams/: Struttura-file.txt  architettura.puml  caso_d'uso.puml
github/workflows/: ci.yml
test_integration/: test_register_login_flow.py
test_services/: test_auth_service.py  test_brent_service.py  test_price_service.py
