[project]
name = "brent-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2,<5",
    "pydantic[email]>=2.13.4",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.2",
    "httpx>=0.28.1",
    "httpx2>=2.7.0",
    "pylint>=4.0.6",
]

[dependency-groups]
dev = [
    "hypothesis>=6.156.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = "."
